sandc/test/fixtures/astRegression/shouldSucceed/productions/strPseudex/IfTypeGuardPseudex.sand
pub class IfTypeGuardPseudex {
    foo() {
        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            foo();
            d
        } else {
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            foo();
            d
        } else if cond {
            d
        } else {
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            d
        } else if cond {
            foo();
            d
        } else {
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            d
        } else if cond {
            d
        } else if cond {
            foo();
            d
        } else {
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            d
        } else if cond {
            d
        } else if cond {
            foo();
            d
        } else if cond {
            d
        } else {
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, b = c {
            d
        } else if cond {
            d
        } else {
            foo();
            d
        };

        return if let b = c, b: Foo = c, b: Foo = c, inline b = c {
            foo();
            d
        } else if cond {
            foo();
            d
        } else {
            foo();
            d
        };

        return if let inline b = c, b: Foo = c, b: Foo = c, inline b = c {
            foo();
            d
        } else if cond {
            foo();
            d
        } else {
            foo();
            d
        };
    }

    trailingComma() {
        return if let b = c, b: Foo = c, b: Foo = c, b = c, {
            foo();
            a
        } else {
            foo();
            a
        };
    }

    onlyInline() {
        return if let inline b = c {
            foo();
            d
        } else {
            d
        };

        return if let inline b = c {
            d
        } else {
            foo();
            d
        };

        return if let inline b = c {
            d
        } else if cond {
            foo();
            d
        } else {
            d
        };

        return if let inline b = c {
            d
        } else if cond {
            foo();
            d
        } else if cond {
            d
        } else {
            d
        };
    }
}