sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/InlineThenNonInline.sand
pub class InlineThenNonInline {
    foo() {
        (
            if let inline a = b(), a = b() {
                c()
            } else {
                c()
            }
        )
    }
}